Fixed spacing for top div in edit_exercise.html

--- a/front_end/css/styles.css
+++ b/front_end/css/styles.css
@@ -19,6 +19,10 @@
     margin-top: 15px;
 }
 
+.bottom-space {
+    margin-bottom: 25px;
+}
+
 .space-div {
     margin-top: 15px;
     margin-bottom: 15px;
@@ -165,8 +169,10 @@ td > button {
     justify-content: space-between;
 }
 
-.title-container {
-    width: 48%;
+.front-row-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
 
 .a-title-container {
